# selfhosted-stack

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  justfile  stack-inventory.yml  stack-network.yml
.github/workflows/: ci.yml  deploy.yml
deploy/: deploy.sh  inventory.yml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/tests/: immich-vs-photoprism.md
scripts/: deploy.sh  format_md_tables.py  mkcert.sh
shared/: networks.yml
stacks/ai/litellm/: .env.example  README.md  compose.yml
stacks/ai/mem0/: .env.example  README.md  compose.yml
stacks/ai/ollama/: .env.example  README.md  compose.yml
stacks/ai/open-webui/: .env.example  README.md  compose.yml
stacks/ai/openclaw/: .env.example  README.md  compose.yml
stacks/ai/stt/: .env.example  README.md  compose.yml
stacks/ai/tts/: .env.example  README.md  compose.yml
stacks/business/dolibarr/: .env.example  README.md  compose.yml
stacks/business/n8n/: .env.example  README.md  compose.yml
stacks/business/postiz/: .env.example  README.md  compose.yml
stacks/core/authentik/: .env.example  README.md  compose.yml
stacks/core/dns/: .env.example  README.md  compose.yml
stacks/core/dns/dnszoner/: .containerignore  Containerfile  README.md  pyproject.toml
stacks/core/dns/dnszoner/src/dnszoner/: __init__.py  cli.py  config.py  discovery.py  health.py  logger.py  main.py  zone.py
stacks/core/dns/dnszoner/tests/: test_basic.py  test_cli.py  test_config.py  test_discovery.py  test_health.py  test_zone.py
stacks/core/dns/hosts-filter/: .containerignore  Containerfile  README.md  pyproject.toml
stacks/core/dns/hosts-filter/src/hostsfilter/: __init__.py  api.py  config.py  hosts.py  main.py
stacks/core/monitoring/: .env.example  README.md  compose.yml
stacks/core/traefik/: .env.example  README.md  compose.yml
stacks/core/wireguard/: .env.example  README.md  compose.yml
stacks/search/meilisearch/: .env.example  README.md  compose.yml
stacks/search/photoprism/: .env.example  README.md  compose.yml
stacks/search/searxng/: .env.example  README.md  compose.yml
stacks/storage/immich/: .env.example  README.md  compose.yml
stacks/storage/photoprism/: .env.example  README.md  compose.yml
stacks/storage/seafile/: .env.example  README.md  compose.yml
(+32 files in other folders)
